<resources>
    <string name="app_name">FinalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--string name="menu_home">Home</string-->
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_search_ticket">Search Tickets</string>
    <string name="menu_sign_out">Sign-out</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_discover">Discover</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>