<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_ticket"
            android:icon="?android:attr/actionModeWebSearchDrawable"
            android:title="@string/menu_search_ticket" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/baseline_star_24"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_add_location_24"
            android:title="@string/menu_discover" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/menu_sign_out" />

    </group>
</menu>