<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search_ticket">

    <fragment
        android:id="@+id/nav_search_ticket"
        android:name="com.example.finalproject.ui.home.HomeFragment"
        android:label="@string/menu_search_ticket"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sign_out"
        android:name="com.example.finalproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.finalproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_popular"
        android:name="com.example.finalproject.ui.location.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_popular" />
</navigation>